
2011-02-22 Sancho Lerena <slerena@artica.es>

        * include/streams.php: Fixed bug 3184746.


2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* operation/agentes/estado_agente.php: fixed the search/filter in the
	agent view, uncomment line...I didn't know the reason by this line
	was comment.
	
	Fixes: #3175137

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.

	* functions_ui.php: Fixed a graphical error displaying action list.

	Fixes: #3182502 

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/styles/pandora.css, godmode/servers/modificar_server.php: added
	lost icons in the legend of servers.
	
	Fixes: #3174880

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/ajax/agent.php: fixed the return of call ajax, now it haven't
	html entities.
	
	Fixes: #3174872

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* ChangeLog: Change the number of item in tracker in previus commit. Sorry
	I have a mistake.  

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/agentes/agent_manager.php: fixed the return of ajax call to
	search parents, now the agent names is without html entities.
	
	Fixes: #3174918

2011-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Fixed the group maps
	when the root group has not agents. Bug: 3152679
	Merged from trunk

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	icons for "label" and "icon", show tooltip on the type icons, hidde some
	fields as type of row. And now the image field show to icon type item and
	of course update too.
	
	Fixes: #3188080

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.
